[package]
name = "quota_manage_system"
version = "0.1.0"
authors = ["tiannian <dtiannian@aliyun.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
serde = { version = "1.0", features = ["derive"] }
rand = "0.7.3"
dislog-hal = { git = "https://github.com/Yinet-project/dislog-hal" }
kv-object = { path = "./KVObject" }
asymmetric-crypto = { git ="https://github.com/Yinet-project/asymmetric-crypto" }
chrono = { git = "https://github.com/chronotope/chrono.git" }


[dev-dependencies]
serde_json = "1.0"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "run-cargo-fmt", "run-cargo-test", "run-cargo-clippy"]
